# Escrow

./: .gitignore  Cargo.toml  README.md  netlify.toml  vercel.json
.cargo/: config.toml
.github/workflows/: ci.yml
contracts/dispute_resolution/: Cargo.toml
contracts/dispute_resolution/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/escrow_factory/: Cargo.toml
contracts/escrow_factory/src/: lib.rs
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: CreateEscrowModal.tsx  EscrowCard.tsx  Navbar.tsx  StateBadge.tsx  StatsBar.tsx
frontend/src/hooks/: useEscrows.ts  useWallet.ts
frontend/src/lib/: constants.ts  stellar.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/types/: index.ts
scripts/: deploy.sh  git_setup.sh
tests/: escrow_test.rs
