[package]
name = "escrow_factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.11", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.11", features = ["testutils", "alloc"] }

[features]
testutils = ["soroban-sdk/testutils"]
